# katana

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Dockerfile  Makefile  README.md  TODOS.md  reproducible.Dockerfile  sidecar-versions.toml
.agents/skills/implement-rpc-api/: SKILL.md
.config/: wt.toml
.githooks/: pre-commit
.github/: Dockerfile
.github/workflows/: amdsev-initrd-test.yml  bench.yml  ci.yml  claude-code-review.yml  custom-release.yml  generate-db-dispatch.yml  release.yml  starknet-specs-release.yml  test.yml  weekly-report.yml
crates/bootstrap/: Cargo.toml
crates/bootstrap/src/: abi.rs  cli.rs  embedded.rs  executor.rs  lib.rs  manifest.rs  plan.rs  report.rs  tui.rs
crates/bootstrap/tests/: bootstrap.rs
crates/cartridge/: Cargo.toml
crates/cartridge/src/: api.rs  lib.rs
crates/cartridge/src/vrf/: client.rs  mod.rs
crates/cartridge/src/vrf/server/: bootstrap.rs  mod.rs
crates/cartridge/tests/: vrf.rs
crates/chain-spec/: Cargo.toml
crates/chain-spec/src/: dev.rs  lib.rs  settlement_check.rs  tee.rs
crates/chain-spec/src/rollup/: file.rs  utils.rs
crates/chain-spec/tests/: rollup.rs
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  file.rs  full.rs  lib.rs  options.rs  sidecar.rs  utils.rs
crates/cli/src/sidecar/: github.rs  mod.rs  platform.rs  verify.rs
crates/contracts/: Cargo.toml  build.rs
crates/contracts/contracts/: .gitignore
crates/contracts/contracts/openzeppelin_udc/: README.md
crates/contracts/macro/: Cargo.toml
crates/contracts/macro/src/: lib.rs
crates/contracts/src/: controller.rs  lib.rs
crates/controller/: Cargo.toml
crates/controller/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/backend/: mod.rs
crates/core/src/service/: block_producer.rs  block_producer_tests.rs  mod.rs
crates/core/tests/: backend.rs
crates/executor/: Cargo.toml
crates/executor/benches/: execution.rs
crates/executor/src/: lib.rs  noop.rs
crates/executor/src/blockifier/: cache.rs  call.rs  mod.rs  state.rs  utils.rs
crates/executor/tests/fixtures/: mod.rs
crates/explorer/src/: lib.rs
crates/gateway/gateway-client/: Cargo.toml
crates/gateway/gateway-client/tests/fixtures/0.7.0/block/: mainnet_833.json
crates/gateway/gateway-client/tests/fixtures/0.7.0/state_update/: mainnet_833.json
crates/gateway/gateway-client/tests/fixtures/pre_0.7.0/block/: mainnet_770.json
crates/gateway/gateway-client/tests/fixtures/pre_0.7.0/state_update/: mainnet_770.json
crates/gateway/gateway-server/: Cargo.toml
crates/gateway/gateway-server/src/: handlers.rs  lib.rs
crates/gateway/gateway-types/: Cargo.toml
crates/gateway/gateway-types/src/: conversion.rs  lib.rs
crates/genesis/: Cargo.toml
crates/genesis/src/: allocation.rs  constant.rs  json.rs  lib.rs
crates/grpc/: Cargo.toml
crates/grpc/src/handlers/: starknet.rs
crates/grpc/tests/: starknet.rs
crates/katana-core/: Cargo.toml
crates/katana-core/src/: constants.rs  lib.rs  sequencer.rs  util.rs
crates/katana-core/src/starknet/: mod.rs
crates/katana-rpc/: Cargo.toml
crates/katana-rpc/src/: lib.rs
crates/katana-rpc/test-data/artifacts/: erc20.sierra.json
crates/messaging/src/: service.rs
crates/metrics/: Cargo.toml
crates/node-bindings/: Cargo.toml
crates/node-bindings/src/: lib.rs
crates/node/config/: Cargo.toml
crates/node/config/src/: build_info.rs  db.rs  gateway.rs  lib.rs  rpc.rs
crates/node/full/: Cargo.toml
crates/node/full/src/: config.rs  lib.rs
crates/node/full/src/pending/: mod.rs  state.rs
crates/node/sequencer/: Cargo.toml
crates/node/sequencer/src/: exit.rs  lib.rs
crates/node/sequencer/src/config/: fork.rs  mod.rs  paymaster.rs  sequencing.rs  tee.rs
crates/node/sequencer/tests/: class_cache_isolation.rs
crates/oracle/gas/: Cargo.toml
crates/paymaster/: Cargo.toml
crates/paymaster/src/: api.rs  lib.rs
crates/pool/pool/: Cargo.toml
crates/pool/pool-api/src/: lib.rs  validation.rs
crates/pool/pool/src/: lib.rs  pool.rs
crates/primitives/: Cargo.toml
crates/primitives/benches/: state.rs
crates/primitives/macro/: Cargo.toml
crates/primitives/src/: block.rs  env.rs  execution.rs  state.rs  version.rs
crates/primitives/src/utils/: mod.rs
crates/rpc/rpc-api/: Cargo.toml
crates/rpc/rpc-api/src/: lib.rs  node.rs  starknet.rs  tee.rs
crates/rpc/rpc-server/: Cargo.toml
crates/rpc/rpc-server/src/: dev.rs  lib.rs  node.rs  paymaster.rs  tee.rs  txpool.rs
crates/rpc/rpc-server/tests/: dev.rs  (+11 more)
crates/rpc/rpc-types/: Cargo.toml
crates/runner/: Cargo.toml
crates/runner/src/: lib.rs
crates/serde-utils/: Cargo.toml
crates/starknet/: Cargo.toml
crates/starknet/src/: lib.rs  rpc.rs
crates/storage/db/: Cargo.toml
crates/storage/fork/: Cargo.toml
crates/sync/pipeline/: Cargo.toml
crates/sync/stage/: Cargo.toml
crates/tasks/src/: blocking.rs
crates/tee/: Cargo.toml
crates/tee/src/: lib.rs
crates/tracing/: Cargo.toml
crates/tracing/src/: lib.rs  otlp.rs
crates/trie/: Cargo.toml
crates/trie/src/: classes.rs  contracts.rs  lib.rs  storages.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs  node.rs  tx_waiter.rs
docs/: amdsev.md  cartridge.md  database.md  pipeline.md  release.md  vrf.md
misc/AMDSEV/: README.md  build-config  build-cryptsetup.sh  build-initrd.sh  build.sh  start-vm.sh  test-initrd.sh
misc/AMDSEV/snp-tools/: Cargo.toml
monitoring/grafana/dashboards/: overview.json
scripts/: bench-percent-diff.js  build-gnu.sh  build-musl.sh  build-reproducible-katana.sh  diff-openrpc-specs.py
tests/db-compat/: Cargo.toml
tests/db-compat/src/: main.rs
tests/saya-tee/: Cargo.toml
tests/saya-tee/src/: assertions.rs  bootstrap.rs  main.rs  nodes.rs  saya.rs
tests/snos/: Cargo.toml
tests/vrf/: Cargo.toml  build.rs
tests/vrf/app/: package.json  vite.config.ts
tests/vrf/app/src/: App.tsx  ConnectWallet.tsx  Dice.tsx  StarknetProvider.tsx  constants.ts
tests/vrf/contracts/: .tool-versions  Scarb.toml
tests/vrf/contracts/src/: lib.cairo
tests/vrf/scripts/: deploy_simple.sh
tests/vrf/src/: main.rs  utils.rs
(+114 files in other folders)
