[workspace]
resolver = "2"

members = [
	"bin/katana",
	"misc/AMDSEV/snp-tools",
	"crates/cartridge",
	"crates/chain-spec",
	"crates/cli",
	"crates/contracts",
	"crates/controller",
	"crates/core",
	"crates/executor",
	"crates/explorer",
	"crates/genesis",
	"crates/gateway/gateway-types",
	"crates/gateway/gateway-client",
	"crates/gateway/gateway-server",
	"crates/grpc",
	"crates/messaging",
	"crates/metrics",
	"crates/node/config",
	"crates/node/sequencer",
	"crates/node/full",
	"crates/node-bindings",
	"crates/oracle/gas",
	"crates/pool/pool",
	"crates/pool/pool-api",
	"crates/primitives",
	"crates/primitives/macro",
	"crates/rpc/rpc-server",
	"crates/rpc/rpc-api",
	"crates/rpc/rpc-types",
	"crates/rpc/rpc-types-builder",
	"crates/runner",
	"crates/runner/macro",
	"crates/serde-utils",
	"crates/starknet",
	"crates/storage/codecs",
	"crates/storage/codecs/derive",
	"crates/storage/db",
	"crates/storage/fork",
	"crates/storage/provider/provider",
	"crates/storage/provider/provider-api",
	"crates/sync/pipeline",
	"crates/sync/stage",
	"crates/tasks",
	"crates/tee",
	"crates/tracing",
	"crates/trie",
	"crates/utils",
	"tests/db-compat",
	"tests/reverse-proxy",
	"crates/paymaster",
	# "tests/snos",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
license-file = "LICENSE"
repository = "https://github.com/dojoengine/katana/"
version = "1.7.0"

[profile.performance]
codegen-units = 1
incremental = false
inherits = "release"
lto = "fat"

[profile.profiling]
debug = true
inherits = "release"

[workspace.dependencies]
cartridge = { path = "crates/cartridge" }
serde-utils = { path = "crates/serde-utils" }

katana-chain-spec = { path = "crates/chain-spec" }
katana-cli = { path = "crates/cli" }
katana-codecs = { path = "crates/storage/codecs" }
katana-codecs-derive = { path = "crates/storage/codecs/derive" }
katana-contracts = { path = "crates/contracts" }
katana-core = { path = "crates/core" }
katana-db = { path = "crates/storage/db" }
katana-executor = { path = "crates/executor" }
katana-explorer = { path = "crates/explorer" }
katana-gateway-types = { path = "crates/gateway/gateway-types" }
katana-gateway-client = { path = "crates/gateway/gateway-client" }
katana-gateway-server = { path = "crates/gateway/gateway-server" }
katana-fork = { path = "crates/storage/fork" }
katana-gas-price-oracle = { path = "crates/oracle/gas" }
katana-genesis = { path = "crates/genesis" }
katana-grpc = { path = "crates/grpc" }
katana-messaging = { path = "crates/messaging" }
katana-metrics = { path = "crates/metrics" }
katana-node-config = { path = "crates/node/config" }
katana-sequencer-node = { path = "crates/node/sequencer" }
katana-full-node = { path = "crates/node/full" }
katana-node-bindings = { path = "crates/node-bindings" }
katana-pipeline = { path = "crates/sync/pipeline" }
katana-pool = { path = "crates/pool/pool" }
katana-pool-api = { path = "crates/pool/pool-api" }
katana-primitives = { path = "crates/primitives" }
katana-primitives-macro = { path = "crates/primitives/macro" }
katana-provider = { path = "crates/storage/provider/provider" }
katana-provider-api = { path = "crates/storage/provider/provider-api" }
katana-rpc-server = { path = "crates/rpc/rpc-server" }
katana-rpc-api = { path = "crates/rpc/rpc-api" }
katana-rpc-types = { path = "crates/rpc/rpc-types" }
katana-rpc-types-builder = { path = "crates/rpc/rpc-types-builder" }
katana-runner = { path = "crates/runner" }
katana-slot-controller = { path = "crates/controller" }
katana-stage = { path = "crates/sync/stage" }
katana-starknet = { path = "crates/starknet" }
katana-tasks = { path = "crates/tasks" }
katana-tee = { path = "crates/tee" }
katana-tracing = { path = "crates/tracing" }
katana-trie = { path = "crates/trie" }
katana-paymaster = { path = "crates/paymaster" }
katana-utils = { path = "crates/utils" }

# cairo-lang
cairo-lang-casm = "2.12.3"
cairo-lang-runner = "2.12.3"
cairo-lang-sierra = "2.12.3"
cairo-lang-sierra-to-casm = "2.12.3"
cairo-lang-starknet = "2.12.3"
cairo-lang-starknet-classes = "2.12.3"
cairo-lang-utils = "2.12.3"

anyhow = "1.0.89"
arbitrary = { version = "1.3.2", features = [ "derive" ] }
assert_fs = "1.1"
assert_matches = "1.5.0"
async-trait = "0.1.82"
auto_impl = "1.2.0"
backon = { version = "1.5", features = [ "tokio-sleep" ] }
base64 = "0.21"
bigdecimal = "0.4.1"
bincode = "1.3"
bitvec = "1.0.1"
camino = { version = "1.1.2", features = [ "serde1" ] }
chrono = { version = "0.4.24", features = [ "serde" ] }
clap = { version = "4.5.16", features = [ "derive", "env" ] }
clap_complete = "4.3"
colored = "2.0.0"
console = "0.15.7"
derive_more = "0.99.17"
flate2 = "1.0.35"
futures = "0.3.30"
futures-util = "0.3.30"
hex = "0.4.3"
indexmap = "2.2.5"
itertools = "0.12.1"
lazy_static = "1.4.0"
metrics = "0.23.0"
num-bigint = "0.4.3"
num-traits = { version = "0.2", default-features = false }
once_cell = "1.0"
parking_lot = "0.12.1"
postcard = { version = "1.0.10", features = [ "use-std" ], default-features = false }
rand = "0.8.5"
rayon = "1.8.0"
regex = "1.10.3"
reqwest = { version = "0.12.15", features = [ "json", "rustls-tls" ], default-features = false }
rstest = "0.18.2"
rstest_reuse = "0.6.0"
sev-snp = { git = "https://github.com/automata-network/amd-sev-snp-attestation-sdk", branch = "main", default-features = false, features = ["legacy", "configfs"] }
sev = { version = "7", default-features = false, features = ["snp"] }
similar-asserts = "1.5.0"
slot = { git = "https://github.com/cartridge-gg/slot", rev = "1298a30" }
spinoff = "0.8.0"
strum = "0.25"
strum_macros = "0.25"
tempfile = "3.9.0"
thiserror = "1.0.32"
tokio = { version = "1.39.2", features = [ "full" ] }
tokio-util = "0.7.12"
toml = "0.8"
url = { version = "2.4.0", features = [ "serde" ] }

# serde
serde = { version = "1.0", features = [ "derive" ] }
serde_json = { version = "1.0", features = [ "arbitrary_precision" ] }
serde_with = "3.11.0"

# server
axum = "0.7"
bytes = "1.10"
http = "1.3"
http-body = "1.0"
hyper = "0.14.27"
jsonrpsee = { version = "0.26", default-features = false }
rustls = "0.23"
tower = "0.5"
tower-http = { version = "0.6", features = [ "trace", "cors", "timeout" ] }
tower-service = "0.3"

# gRPC
prost = "0.12"
tonic = { version = "0.11", features = [ "gzip", "tls", "tls-roots", "tls-webpki-roots" ] }
tonic-build = "0.11"
tonic-reflection = "0.11"

# benchmark
criterion = "0.5.1"
pprof = { version = "0.13.0", features = [ "criterion", "flamegraph" ] }

# alloys
alloy-contract = { version = "1.2.1", default-features = false }
alloy-network = { version = "1.2.1", default-features = false }
alloy-primitives = { version = "1.2.1", default-features = false }
alloy-provider = { version = "1.2.1", default-features = false }
alloy-rpc-types-eth = { version = "1.2.1", default-features = false }
alloy-signer = { version = "1.2.1", default-features = false }
alloy-sol-types = { version = "1.2.1", default-features = false }
alloy-transport = { version = "1.2.1", default-features = false }
alloy-transport-http = { version = "1.2.1", default-features = false }

# macro
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", default-features = false }

# tracing/logging
log = "0.4.21"
tracing = { version = "0.1.38", features = [ "log" ], default-features = false }
tracing-appender = "0.2"
tracing-log = "0.1.3"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = "0.3.16"

# opentelemetry
opentelemetry = { version = "0.30.0", features = [ "trace" ] }
opentelemetry-gcloud-trace = "0.20"
opentelemetry-http = "0.30.0"
opentelemetry-stackdriver = { version = "0.27.0", features = [ "propagator" ] }

# starknet
starknet = "0.17.0"
starknet-crypto = "0.8.1"
starknet-types-core = { version = "=0.2.3", features = [ "arbitrary", "hash" ] }
stark-vrf = { git = "https://github.com/dojoengine/stark-vrf.git", rev = "96d6d2a" }
# Some types that we used from cairo-vm implements the `Arbitrary` trait,
# only under the `test_utils` feature.
cairo-vm = { version = "2.5.0", features = [ "test_utils" ] }

# branch: blockifier/v0.16.0-rc.0
blockifier = { git = "https://github.com/dojoengine/sequencer", rev = "d2591bb", default-features = false }
starknet_api = { git = "https://github.com/dojoengine/sequencer", rev = "d2591bb" }

cainome = { git = "https://github.com/cartridge-gg/cainome", rev = "7d60de1", features = [ "abigen-rs" ] }
cainome-cairo-serde = { git = "https://github.com/cartridge-gg/cainome", rev = "7d60de1" }
piltover = { git = "https://github.com/kariy/piltover.git", branch = "feat/rpc0.9" }

# paymaster
paymaster-rpc = { git = "https://github.com/cartridge-gg/paymaster", branch = "copenhagen-4cb4" }
paymaster-service = { git = "https://github.com/cartridge-gg/paymaster", branch = "copenhagen-4cb4" }

[patch.crates-io]
# NOTE: remove this patch once this PR is merged <https://github.com/starknet-io/types-rs/pull/132>
#
# This patch fixes an issue where we're unable to correctly evaluate the accurate size
# for constructing `Felt` from unstructured data (Arbitrary).
starknet-types-core = { git = "https://github.com/kariy/types-rs", rev = "0f6ae31" }
