[package]
edition.workspace = true
license.workspace = true
name = "cartridge"
repository.workspace = true
version.workspace = true

[dependencies]
katana-contracts.workspace = true
katana-genesis.workspace = true
katana-primitives.workspace = true
katana-rpc-types.workspace = true

anyhow.workspace = true
ark-ff = "0.4.2"
cainome-cairo-serde.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
stark-vrf.workspace = true
starknet.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
