[package]
build = "build.rs"
edition.workspace = true
license.workspace = true
name = "katana-contracts"
repository.workspace = true
version.workspace = true

[dependencies]
katana-contracts-macro = { path = "macro" }
katana-primitives.workspace = true

flate2.workspace = true
lazy_static.workspace = true
starknet.workspace = true

thiserror.workspace = true
