[package]
edition.workspace = true
name = "katana-slot-controller"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
katana-contracts.workspace = true
katana-genesis.workspace = true
katana-primitives.workspace = true
