[package]
description = "Katana core implementation."
edition.workspace = true
license-file.workspace = true
name = "katana-core"
repository.workspace = true
version.workspace = true

[dependencies]
katana-chain-spec.workspace = true
katana-executor.workspace = true
katana-gas-price-oracle.workspace = true
katana-metrics.workspace = true
katana-pool.workspace = true
katana-primitives = { workspace = true, features = [ "arbitrary" ] }
katana-provider.workspace = true
katana-tasks.workspace = true
katana-trie.workspace = true

anyhow.workspace = true
derive_more.workspace = true
futures.workspace = true
lazy_static.workspace = true
metrics.workspace = true
parking_lot.workspace = true
rayon.workspace = true
starknet-types-core.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
alloy-primitives = { workspace = true, features = [ "serde" ] }
arbitrary.workspace = true
assert_matches.workspace = true
criterion.workspace = true
hex.workspace = true
katana-genesis.workspace = true
pprof.workspace = true
rand.workspace = true
rstest.workspace = true
tempfile.workspace = true
url.workspace = true

[[bench]]
harness = false
name = "commit"
