[package]
description = "Katana execution engine. This crate provides abstractions and implementations for transaction execution."
edition.workspace = true
name = "katana-executor"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
katana-chain-spec.workspace = true
katana-primitives.workspace = true
katana-provider.workspace = true

blockifier = { workspace = true, features = [ "testing" ] }
num-traits.workspace = true
quick_cache = "0.6.10"
thiserror.workspace = true
tracing.workspace = true

# cairo-native
cairo-lang-starknet-classes = { workspace = true, optional = true }
cairo-native = { version = "0.6.2", optional = true }
cairo-vm.workspace = true
parking_lot.workspace = true
rayon = { workspace = true, optional = true }
starknet_api.workspace = true

[dev-dependencies]
katana-chain-spec.workspace = true
katana-contracts.workspace = true
katana-genesis.workspace = true
katana-provider = { workspace = true, features = [ "test-utils" ] }
katana-rpc-types.workspace = true
katana-utils.workspace = true

alloy-primitives.workspace = true
anyhow.workspace = true
assert_matches.workspace = true
num-traits.workspace = true
rstest.workspace = true
rstest_reuse.workspace = true
serde_json.workspace = true
similar-asserts.workspace = true
starknet.workspace = true
tokio.workspace = true

criterion.workspace = true
oneshot = { version = "0.1.8", default-features = false, features = [ "std" ] }
pprof.workspace = true
rayon.workspace = true

[features]
native = [
	"blockifier/cairo_native",
	"dep:cairo-lang-starknet-classes",
	"dep:cairo-native",
	"dep:rayon",
]

[[bench]]
harness = false
name = "execution"
