[package]
description = "Genesis configuration and utilities for Katana"
edition.workspace = true
name = "katana-genesis"
version.workspace = true

[dependencies]
katana-contracts.workspace = true
katana-primitives.workspace = true

anyhow.workspace = true
base64.workspace = true
cairo-vm.workspace = true
derive_more.workspace = true
rand = { workspace = true, features = [ "small_rng" ] }
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
starknet.workspace = true
thiserror.workspace = true

[dev-dependencies]
similar-asserts.workspace = true
