[package]
edition.workspace = true
license-file.workspace = true
name = "katana-grpc"
repository.workspace = true
version.workspace = true

[dependencies]
# Internal dependencies
katana-pool.workspace = true
katana-primitives.workspace = true
katana-provider.workspace = true
katana-rpc-api.workspace = true
katana-rpc-server.workspace = true
katana-rpc-types.workspace = true

# gRPC dependencies
http = "0.2"
prost.workspace = true
tonic.workspace = true
tonic-reflection = "0.11"

# Async runtime
tokio.workspace = true

# Logging
tracing.workspace = true

# Error handling
thiserror.workspace = true

# Serialization
serde_json.workspace = true

# Starknet types
starknet.workspace = true

# Cairo types
cairo-lang-starknet-classes.workspace = true
num-bigint.workspace = true

tower-service.workspace = true

[dev-dependencies]
hex = "0.4"
katana-utils = { workspace = true, features = [ "node" ] }
tokio = { workspace = true, features = [ "macros", "rt-multi-thread" ] }

[build-dependencies]
tonic-build.workspace = true
