[package]
name = "katana-core"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Katana core implementation."

[dependencies]
anyhow.workspace = true
blockifier = { git = "https://github.com/starkware-libs/blockifier" }
cairo-lang-starknet.workspace = true
cairo-vm = { git = "https://github.com/lambdaclass/cairo-rs.git", rev = "d545372f" }
futures = "0.3"
serde_json = "1.0.70"
starknet.workspace = true
starknet_api.workspace = true
thiserror.workspace = true
tracing = "0.1.34"
