[package]
edition.workspace = true
name = "katana-metrics"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { workspace = true, features = [ "http1", "http2", "server", "tcp" ] }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

# Metrics
metrics.workspace = true
metrics-derive = "0.1"
metrics-exporter-prometheus = "0.16.0"
metrics-process = "2.3.0"
metrics-util = "0.18.0"
sysinfo = "0.35.1"

[target.'cfg(not(windows))'.dependencies]
jemalloc-ctl = { version = "0.5.0", optional = true }
jemallocator = { version = "0.5.0", optional = true }

[features]
default = [ "jemalloc" ]
jemalloc = [ "dep:jemalloc-ctl", "dep:jemallocator" ]
jemalloc-prof = [ "jemalloc", "jemallocator?/profiling" ]
