[package]
edition.workspace = true
license.workspace = true
name = "katana-paymaster"
repository.workspace = true
version.workspace = true

[dependencies]
katana-contracts.workspace = true
katana-primitives.workspace = true
katana-rpc-types.workspace = true

http.workspace = true
cainome.workspace = true
jsonrpsee = { workspace = true, features = [ "client", "http-client", "macros", "server" ] }
paymaster-rpc.workspace = true
serde.workspace = true
serde_json.workspace = true
starknet.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
katana-genesis.workspace = true
tokio = { workspace = true, features = [ "macros", "rt-multi-thread" ] }
