[package]
description = "Commonly used types in Katana"
edition.workspace = true
name = "katana-primitives"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
katana-primitives-macro.workspace = true

cairo-vm.workspace = true
cairo-lang-sierra.workspace = true
cairo-lang-utils.workspace = true
cairo-lang-starknet-classes.workspace = true

anyhow.workspace = true
arbitrary = { workspace = true, optional = true }
blockifier = { workspace = true, features = [ "testing" ] } # some Clone derives are gated behind 'testing' feature
cainome-cairo-serde.workspace = true
derive_more.workspace = true
lazy_static.workspace = true
num-traits.workspace = true
serde.workspace = true
serde_json.workspace = true
starknet.workspace = true
starknet-types-core.workspace = true
starknet_api.workspace = true
thiserror.workspace = true

alloy-primitives = { workspace = true, features = [ "arbitrary" ] }
num-bigint = "0.4.6"
serde_json_pythonic = "0.1.2"
strum.workspace = true
strum_macros.workspace = true

[dev-dependencies]
assert_matches.workspace = true
postcard.workspace = true
rstest.workspace = true
similar-asserts.workspace = true

criterion.workspace = true
pprof.workspace = true

[features]
default = [ "serde" ]

arbitrary = [
	"alloy-primitives/arbitrary",
	"cairo-vm/test_utils",
	"dep:arbitrary",
]
serde = [ "alloy-primitives/serde", "blockifier/transaction_serde" ]

[[bench]]
harness = false
name = "class"

[[bench]]
harness = false
name = "state"
