[package]
description = "TEE (Trusted Execution Environment) support for Katana"
edition.workspace = true
name = "katana-tee"
version.workspace = true

[dependencies]
bincode = { workspace = true, optional = true }
clap = { workspace = true, default-features = false, features = [ "derive" ] }
serde.workspace = true
sev = { workspace = true, optional = true }
sev-snp = { workspace = true, optional = true }
thiserror.workspace = true
tracing = { workspace = true, optional = true }

[dev-dependencies]
rstest.workspace = true
tempfile.workspace = true

[features]
default = [  ]
snp = [ "dep:bincode", "dep:sev-snp", "dep:tracing" ]
# Exposes `MockProvider` and `TeeProviderType::Mock` for use by integration test
# crates that need to serve `tee_generateQuote` without real SEV-SNP hardware.
# Not intended for production binaries.
tee-mock = []
