[package]
description = "TEE (Trusted Execution Environment) support for Katana"
edition.workspace = true
name = "katana-tee"
version.workspace = true

[dependencies]
bincode = { workspace = true, optional = true }
clap = { workspace = true, default-features = false, features = [ "derive" ] }
serde.workspace = true
sev = { workspace = true, optional = true }
sev-snp = { workspace = true, optional = true }
thiserror.workspace = true
tracing = { workspace = true, optional = true }
zeroize = { workspace = true, optional = true }

[dev-dependencies]
rstest.workspace = true
tempfile.workspace = true

[features]
default = [  ]
snp = [ "dep:bincode", "dep:sev-snp", "dep:tracing", "dep:zeroize" ]
# Exposes `MockProvider` and `TeeProviderType::Mock` for use by integration test
# crates that need to serve `tee_generateQuote` without real SEV-SNP hardware.
# Not intended for production binaries.
tee-mock = []

# `snp-derivekey`: tiny standalone binary run once in the measured SEV-SNP initrd
# to derive a 32-byte key from SNP_GET_DERIVED_KEY and emit it on stdout. Used by
# the initrd's LUKS unseal flow. Only built when the `snp` feature is enabled.
[[bin]]
name = "snp-derivekey"
path = "src/bin/derivekey.rs"
required-features = [ "snp" ]
