[package]
edition.workspace = true
license.workspace = true
name = "katana-tracing"
repository.workspace = true
version.workspace = true

[dependencies]
clap.workspace = true
dirs = "6.0.0"
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-log.workspace = true
tracing-subscriber = { workspace = true, features = [ "chrono", "env-filter", "json", "time", "tracing-log" ] }

# OpenTelemetry dependencies for trace context propagation
anyhow.workspace = true
http.workspace = true
opentelemetry.workspace = true
opentelemetry-gcloud-trace.workspace = true
opentelemetry-http.workspace = true
opentelemetry-otlp = { version = "0.30.0", features = [ "grpc-tonic" ] }
opentelemetry-stackdriver.workspace = true
opentelemetry_sdk = "0.30.0"
rustls.workspace = true
tower-http = { workspace = true, features = [ "trace" ] }
tracing-opentelemetry.workspace = true

bytes.workspace = true
chrono.workspace = true
http-body-util = "0.1.3"
