[package]
edition.workspace = true
license.workspace = true
name = "katana-trie"
repository.workspace = true
version.workspace = true

[dependencies]
katana-primitives.workspace = true

anyhow.workspace = true
bitvec.workspace = true
serde.workspace = true
slab = "0.4.9"
starknet.workspace = true
starknet-types-core.workspace = true
thiserror.workspace = true

[dependencies.bonsai-trie]
# revision with partial merkle tree
# related PR:  https://github.com/dojoengine/bonsai-trie/pull/3
rev = "07c0619"
default-features = false
features = [ "std" ]
git = "https://github.com/dojoengine/bonsai-trie.git"
