[package]
edition.workspace = true
license.workspace = true
name = "katana-utils"
repository.workspace = true
version.workspace = true

[dependencies]
katana-primitives.workspace = true
katana-rpc-api.workspace = true
katana-starknet.workspace = true
katana-rpc-types.workspace = true
katana-utils-macro = { path = "macro" }

anyhow.workspace = true
arbitrary.workspace = true
assert_matches.workspace = true
async-trait.workspace = true
futures.workspace = true
rand.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [ "macros", "rt-multi-thread", "signal", "time" ], default-features = false }

# node-only dependencies
katana-chain-spec = { workspace = true, optional = true }
katana-core = { workspace = true, optional = true }
katana-db = { workspace = true, optional = true }
katana-executor = { workspace = true, optional = true }
katana-sequencer-node = { workspace = true, optional = true }
katana-provider = { workspace = true, optional = true }
katana-rpc-server = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
starknet = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }

[features]
node = [
	"katana-sequencer-node/grpc",
    "clap",
    "katana-chain-spec",
    "katana-core",
    "katana-db",
    "katana-executor",
    "katana-sequencer-node",
    "katana-provider",
    "katana-rpc-server",
    "starknet",
    "tempfile",
]
explorer = [ "node", "katana-sequencer-node/explorer" ]

[[bin]]
name = "generate_migration_db"
path = "src/bin/generate_migration_db.rs"
required-features = [ "node" ]
