[package]
edition.workspace = true
license.workspace = true
name = "saya-tee-e2e-test"
publish = false
repository.workspace = true
version.workspace = true

[[bin]]
name = "saya-tee-e2e-test"
path = "src/main.rs"

[dependencies]
katana-chain-spec.workspace = true
katana-genesis.workspace = true
katana-messaging.workspace = true
katana-primitives.workspace = true
katana-sequencer-node = { workspace = true, features = ["tee", "tee-mock"] }
katana-tee = { workspace = true, features = ["tee-mock"] }
katana-utils = { workspace = true, features = ["node"] }

cainome.workspace = true
anyhow.workspace = true
hex.workspace = true
serde_json.workspace = true
starknet.workspace = true
starknet-types-core.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
