[package]
edition.workspace = true
license.workspace = true
name = "snos-integration-test"
repository.workspace = true
version.workspace = true

[dependencies]
# snos branch: kariy/0.13.4_rpc0.9
snos = { package = "prove_block", git = "https://github.com/cartridge-gg/snos", rev = "c96eb9e" }
starknet-os = { git = "https://github.com/cartridge-gg/snos", rev = "c96eb9e" }
# SNOS-compatible cairo-vm
cairo-vm = { package = "cairo-vm", git = "https://github.com/kariy/cairo-vm", branch = "kariy/1.0.2_clear-cell" }

c-kzg = "2.1.0"
either = "1.15.0"

katana-chain-spec.workspace = true
katana-messaging.workspace = true
katana-primitives.workspace = true
katana-provider.workspace = true
katana-sequencer-node.workspace = true

anyhow.workspace = true
starknet.workspace = true
tokio = { version = "1.39.2", features = [ "full" ] }
