[package]
edition.workspace = true
name = "katana-contracts-macro"
version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
serde_json = "1.0"
syn = { version = "2.0", features = [ "extra-traits", "full" ] }

# Dependencies for contract class parsing and hash computation
cairo-lang-starknet-classes.workspace = true
katana-primitives.workspace = true
starknet-crypto.workspace = true
starknet-types-core.workspace = true
