[package]
edition.workspace = true
license.workspace = true
name = "katana-gateway-client"
repository.workspace = true
version.workspace = true

[dependencies]
katana-gateway-types.workspace = true
katana-primitives.workspace = true

anyhow.workspace = true
clap.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [ "macros", "rt" ] }
tracing.workspace = true
url.workspace = true

[dev-dependencies]
rstest.workspace = true
similar-asserts.workspace = true
wiremock = "0.6"

[[bin]]
name = "gateway"
path = "bin/client.rs"
